--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,12 +5,12 @@ repository: https://github.com/Wayaer/fl_extended
 
 environment:
   sdk: '>=3.6.0 <5.0.0'
-  flutter: ">=3.29.0"
+  flutter: '>=3.29.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  collection: ^1.19.0
+  collection: ^1.19.1
 
 dev_dependencies:
   flutter_lints: ^5.0.0
